--- a/src/pages/actionable-marketing-institute.astro
+++ b/src/pages/actionable-marketing-institute.astro
@@ -106,13 +106,13 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									As the marketing landscape becomes increasingly competitive,
 									it's crucial for businesses to make every interaction with
 									their target audience count. One way to do that is by creating
-									landing pages that are fast, engaging, and user-friendly.
+									landing pages that are fast, engaging, and&nbsp;user-friendly.
 								</p>
 								<p class="lg:text-lg lg:leading-loose">
 									This project reflection will take a closer look at the
 									strategy, tactics, and tools used to create high-performing
 									landing pages for the Actionable Marketing Institute that
-									delivered results.
+									delivered&nbsp;results.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									About the Actionable Marketing Institute
@@ -122,7 +122,8 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									courses that provide actionable insights and practical tips
 									for marketers to implement in their own marketing strategies.
 									Topics include content marketing, social media marketing,
-									email marketing, search engine optimization, and analytics.
+									email marketing, search engine optimization,
+									and&nbsp;analytics.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									What problem are we solving?
@@ -131,23 +132,23 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									The CoSchedule marketing team had been building a library of
 									marketing courses on Teachable* over the past three years. The
 									courses are perfect for marketers looking for no-fluff
-									training, however the courses were highly under utilized.
+									training, however the courses were highly under&nbsp;utilized.
 								</p>
 								<p>
 									The constraints of the Teachable platform created a poor user
 									experience for prospective students. It was hard to view the
 									full course list and understand the value of AMI. We wanted
 									prospective students to be able to find exactly what they
-									wanted to learn, when they wanted to learn it.
+									wanted to learn, when they wanted to learn&nbsp;it.
 								</p>
 								<p>
 									In order to make AMI more user-friendly and position it as the
-									best value we built a new homepage and individual course
-									pages.
+									best value we built a new homepage and individual
+									course&nbsp;pages.
 								</p>
 								<p class="italic">
 									*Teachable is an all-in-one platform that helps you create and
-									sell course online.
+									sell course&nbsp;online.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									Challenges
@@ -157,17 +158,17 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									Teachable is built for people who want to get up and running
 									quickly selling online courses. It's great for managing
 									courses, users, and creating basic sales pages with no coding
-									experiences necessary.
+									experiences&nbsp;necessary.
 								</p>
 								<p>
 									We had to figure out how to incorporate the features and
-									functionality we wanted using Teachable. Or find a better
-									solution.
+									functionality we wanted using Teachable. Or find a
+									better&nbsp;solution.
 								</p>
 								<p>
 									Another challenging requirement was giving the marketing team
 									full control to add new course pages and make updates to the
-									page content on the fly.
+									page content on the&nbsp;fly.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Process</h2>
 								<h3 class="pt-8 text-xl font-medium lg:text-2xl">Research</h3>
@@ -176,26 +177,26 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									Teachable. I had never used Teachable before so I started by
 									familiarizing myself with the out-of-the-box functionality and
 									documentation. How did the page builder work? What page
-									elements and layout options were available? Could I customize
-									anything?
+									elements and layout options were available? Could I
+									customize&nbsp;anything?
 								</p>
 								<p>
 									I also looked at other Teachable pages: What did they look
-									like? Did they have similar features to what we wanted?
+									like? Did they have similar features to what we&nbsp;wanted?
 								</p>
 								<p>
 									I found the page builder was extremely limiting. I could
 									include custom code snippets, but I would have to build them
 									outside of Teachable and then drop them in as one long line of
 									code, inline styles and all. What a nightmare to troubleshoot!
-									And most course pages looked the same, not what we were going
-									for.
+									And most course pages looked the same, not what we were
+									going&nbsp;for.
 								</p>
 								<p>
 									Knowing that we’d have to hand-code the elements to
 									incorporate the features we wanted, we wanted a better
 									solution than custom code snippets. Do we have to use
-									Teachable? Could we build our own pages?
+									Teachable? Could we build our own&nbsp;pages?
 								</p>
 								<p>
 									After discussions with the team, we decided not to use
@@ -204,11 +205,11 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									think big and add all the features and functionality we wanted
 									to convert prospective students. It also gave the marketing
 									team full control to create new pages and change the content
-									as needed for promotions or other marketing initiatives.
+									as needed for promotions or other marketing&nbsp;initiatives.
 								</p>
 								<p>
 									Whew! Now that we have that figured out, let’s move on to the
-									fun stuff!
+									fun&nbsp;stuff!
 								</p>
 								<h3 class="pt-8 text-xl font-medium lg:text-2xl">Wireframes</h3>
 								<h4 class="pt-8 text-lg font-medium lg:text-xl">
@@ -216,7 +217,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 								</h4>
 								<p>
 									There are a few key areas I focused on while wireframing: the
-									hero section, the lessons, and the plan comparison
+									hero section, the lessons, and the plan&nbsp;comparison
 								</p>
 							</div>
 						</SmallContainer>
@@ -233,7 +234,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<span class="font-medium">Hero</span> – To give prospective students
 									a quick course snapshot I included a few course details including
 									course level, course category, est. time to complete, number of
-									lessons, and number of resources.
+									lessons, and number of&nbsp;resources.
 								</p>
 							</div>
 						</SmallContainer>
@@ -250,7 +251,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<span class="font-medium">Lessons</span> – I played around with
 									various lesson layouts including a condensed list with a video
 									preview compared to an expanded list with a short description for
-									each lesson.
+									each&nbsp;lesson.
 								</p>
 							</div>
 						</SmallContainer>
@@ -267,7 +268,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<span class="font-medium">Plan comparison</span> – We wanted to
 									emphasize the value of purchasing AMI Pro which includes all courses
 									vs purchasing a single course. I chose a two column layout to compare
-									plans side by side.
+									plans side by&nbsp;side.
 								</p>
 								<h4 class="pt-8 text-lg font-medium lg:text-xl">Homepage</h4>
 								<p>
@@ -276,7 +277,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									similar the pages were. Combining the pages streamlined the
 									user experience. No switching between pages, now all the
 									information would be on one page. The course catalog became
-									the main feature on the homepage.
+									the main feature on the&nbsp;homepage.
 								</p>
 							</div>
 						</SmallContainer>
@@ -294,11 +295,12 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									how to display the course cards, comparing the pros and cons of
 									showing all courses like a library or condensing them into a carousel.
 									The carousel allows users to look through the courses without completely
-									taking over the page.
+									taking over the&nbsp;page.
 								</p>
 								<p>
 									If a user is looking for a specific type of course, I included
-									the ability to filter the courses by selecting a category.
+									the ability to filter the courses by selecting
+									a&nbsp;category.
 								</p>
 								<p>
 									I also tried various card layouts, taking into consideration
@@ -308,7 +310,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									well known. Including their names is not as valuable as other
 									course details. Ultimately, each course card includes the
 									title, description, number of lessons, estimated time to
-									completion, and certification if applicable.
+									completion, and certification if&nbsp;applicable.
 								</p>
 							</div>
 						</SmallContainer>
@@ -326,13 +328,13 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									Actionable Marketing Institute was formerly CoSchedule
 									Academy. Along with a new name AMI got a new brand crafted by
 									our Senior Graphic Designer, who created all the graphics for
-									these pages.
+									these&nbsp;pages.
 								</p>
 								<p>
 									The AMI brand is fun, trendy, and eye-catching with bright
 									colors and unique iconography for each course. The goal of the
 									design was to complement the new brand, allowing the
-									incredible illustrations to stand out.
+									incredible illustrations to stand&nbsp;out.
 								</p>
 							</div>
 						</SmallContainer>
@@ -351,30 +353,30 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									marketing team complete control over the page content to
 									update as needed, and allow them to add new course pages as
 									new courses are released. This meant that everything needed to
-									be editable from the copy to the color.
+									be editable from the copy to the&nbsp;color.
 								</p>
 								<p>
 									The pages were built as templates and use Advanced Custom
-									Fields and PHP to dynamically add content and color.
+									Fields and PHP to dynamically add content and&nbsp;color.
 								</p>
 								<p>Behind the scenes functionality:</p>
 								<ul class="grid list-disc gap-y-2 pl-8">
 									<li>
 										Flexible layouts to accommodate for more or less content on
-										each page.
+										each&nbsp;page.
 									</li>
 									<li>Customizable colors to make each page unique.</li>
 									<li>
 										Optional elements, such as a hello bar and exit offer that
-										can be shown or hidden at any time.
+										can be shown or hidden at any&nbsp;time.
 									</li>
 									<li>
 										Promo callouts add arrows and additional copy that can be
-										added when running a promotion.
+										added when running a&nbsp;promotion.
 									</li>
 									<li>
 										A Course carousel that is fully responsive, filterable, and
-										adapts as new courses are added to the list.
+										adapts as new courses are added to the&nbsp;list.
 									</li>
 								</ul>
 							</div>
@@ -393,11 +395,11 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									Since launching the new website pages the marketing team has
 									been able to amp up promotion of the Actionable Marketing
 									Institute. We’ve seen significantly higher conversion rates
-									and consistent growth.
+									and consistent&nbsp;growth.
 								</p>
 								<p class="pt-8 text-sm italic text-slate-600">
 									Actionable Marketing Institute is a property of CoSchedule.
-									All rights reserved.
+									All rights&nbsp;reserved.
 								</p>
 							</div>
 						</SmallContainer>
