--- a/src/pages/coschedule.astro
+++ b/src/pages/coschedule.astro
@@ -35,7 +35,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						>
 							A look at the process of rebuilding coschedule.com using a modern
 							technology stack to improve page performance and search engine
-							optimization (SEO).
+							optimization&nbsp;(SEO).
 						</p>
 					</div>
 					<aside
@@ -110,12 +110,12 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									than ever. With search engines like Google factoring in user
 									experience metrics as a ranking signal, businesses that fail
 									to prioritize website performance risk being left behind by
-									their competitors.
+									their&nbsp;competitors.
 								</p>
 								<p class="lg:text-lg lg:leading-loose">
 									In an effort to boost website performance and address
 									declining traffic, we embarked on a significant project to
-									convert the website from PHP to React.
+									convert the website from PHP to&nbsp;React.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									About Google's Core Web Vitals
@@ -125,7 +125,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									to evaluate the quality of user experience on websites.
 									Introduced in 2020, Google made Core Web Vitals an official
 									ranking factor in mid-2021. This move underscores the
-									importance of user experience in online businesses.
+									importance of user experience in online&nbsp;businesses.
 								</p>
 								<p>
 									The Core Web Vitals measure three aspects of user experience,
@@ -133,32 +133,40 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									cumulative layout shift. By paying attention to these metrics,
 									website owners can optimize their websites and provide a
 									better experience for their users with faster page loads,
-									improved interactivity, and visual stability.
+									improved interactivity, and visual&nbsp;stability.
 								</p>
 							</div>
 						</SmallContainer>
 						<LargeContainer>
 							<figure class="mb-8 mt-16 grid gap-4 md:grid-cols-2">
 								<div
-									class="grid gap-4 border border-solid border-green-600 p-8"
+									class="grid content-start gap-4 border border-solid border-green-600 p-8"
 								>
 									<div class="flex items-center gap-2">
 										<img src={googleLogo} alt="Google logo" class="max-h-8" />
-										<p class="text-xl font-medium">Core Web Vitals</p>
+										<p class="text-lg font-medium lg:text-xl">
+											Core Web Vitals
+										</p>
 									</div>
 									<div class="grid gap-2 text-white">
 										<div class="bg-green-600 p-4">
-											<p class="text-lg font-medium">Loading</p>
+											<p class="font-medium leading-normal lg:text-lg">
+												Loading
+											</p>
 											<p class="text-sm leading-loose">
 												Largest Contentful Paint
 											</p>
 										</div>
 										<div class="bg-green-600 p-4">
-											<p class="text-lg font-medium">Interactivity</p>
+											<p class="font-medium leading-normal lg:text-lg">
+												Interactivity
+											</p>
 											<p class="text-sm leading-loose">First Input Delay</p>
 										</div>
 										<div class="bg-green-600 p-4">
-											<p class="text-lg font-medium">Visual Stability</p>
+											<p class="font-medium leading-normal lg:text-lg">
+												Visual Stability
+											</p>
 											<p class="text-sm leading-loose">
 												Cumulative Layout Shift
 											</p>
@@ -169,20 +177,22 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									class="grid content-start gap-4 border border-solid border-blue-500 p-8"
 								>
 									<div class="flex h-8 items-center gap-2">
-										<p class="text-xl font-medium">Other Web Vitals</p>
+										<p class="text-lg font-medium lg:text-xl">
+											Other Web Vitals
+										</p>
 									</div>
 									<div class="grid gap-2">
 										<div class="bg-blue-100 p-4">
-											<p class="text-lg font-medium">Mobile Friendly</p>
+											<p class="font-medium lg:text-lg">Mobile Friendly</p>
 										</div>
 										<div class="bg-blue-100 p-4">
-											<p class="text-lg font-medium">Safe Browsing</p>
+											<p class="font-medium lg:text-lg">Safe Browsing</p>
 										</div>
 										<div class="bg-blue-100 p-4">
-											<p class="text-lg font-medium">HTTPS</p>
+											<p class="font-medium lg:text-lg">HTTPS</p>
 										</div>
 										<div class="bg-blue-100 p-4">
-											<p class="text-lg font-medium">
+											<p class="font-medium lg:text-lg">
 												No Intrusive Interstitials
 											</p>
 										</div>
@@ -201,7 +211,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									website traffic, which required an urgent solution. Secondly,
 									our website was failing to meet the standards of Google's Core
 									Web Vitals, which was hurting our search engine rankings and
-									user experience.
+									user&nbsp;experience.
 								</p>
 							</div>
 						</SmallContainer>
@@ -221,8 +231,8 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									that more that half of users were experiencing page load times
 									greater than 2.5s, this was hurting us the most. 92% of users
 									were experiencing good page interactivity, which is not bad.
-									And 20% of users were experiencing some layout shift or visual
-									disturbance.
+									And 20% of users were experiencing some layout shift or
+									visual&nbsp;disturbance.
 								</p>
 							</div>
 						</SmallContainer>
@@ -241,7 +251,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									Typescript on the Next.js framework, replacing the old PHP
 									codebase. This move allowed us to take advantage of Next.js's
 									built-in SEO capabilities, including image optimization and
-									preloading pages, among other benefits.
+									preloading pages, among other&nbsp;benefits.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Approach</h2>
 								<p>
@@ -251,7 +261,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									applications. And finally the simple static pages. We also
 									took this time to review pages that had little to no traffic
 									or were simply unnecessary and deleted and implemented
-									redirects for those pages.
+									redirects for those&nbsp;pages.
 								</p>
 							</div>
 						</SmallContainer>
@@ -269,92 +279,95 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 								</h2>
 								<p>
 									During the conversion process we made several improvements to
-									the site.
+									the&nbsp;site.
 								</p>
 								<p>
 									First, we implemented ContentKing. This tool keeps an eye on
 									the health and performance of the website. As changes are
 									made, such as updates to meta tags, or links becoming broken,
-									we are notified and can evaluate and fix any issues.
+									we are notified and can evaluate and fix any&nbsp;issues.
 								</p>
 								<p>
 									Second, we made use of Google Search Console. This tool
 									allowed us to monitor the site's performance in search
 									results, and we were able to use the data to make further
-									improvements to the site's SEO.
+									improvements to the site's&nbsp;SEO.
 								</p>
 								<p>
 									The third key improvement was developing content hubs. Content
 									hubs provide a way to organize pages around a central theme.
 									The nested structure helps search engine algorithms more
 									easily understand the content's context and relevance, which
-									can lead to better rankings and increased traffic.
+									can lead to better rankings and increased&nbsp;traffic.
 								</p>
 								<p>
 									Finally, as a result of rewriting the codebase, we were able
 									to eliminate poor coding practices and implement semantic
 									HTML, which improved the accessibility and search engine
-									optimization of the site.
+									optimization of the&nbsp;site.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Results</h2>
 								<p>
 									In total we converted over 2280 pages. This breaks down into
 									69 templates now shared across multiple pages, and two ember
-									applications. 100 pages were retired.
+									applications. 100 pages were&nbsp;retired.
 								</p>
 								<p>
 									The website passes all Google's Core Web Vitals. Our website
 									achieved significant improvements, with 76% of users
 									experiencing page load times less than 2.5s, 94% of users
 									experiencing good page interactivity, and only 7% of users
-									experiencing layout shift or visual disturbance.
+									experiencing layout shift or visual&nbsp;disturbance.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Impact</h2>
 								<p>
 									Overall, the website saw an improvement in search engine
 									rankings, resulting in the highest organic traffic in our
 									company's history. It is also more reliable and faster, making
-									it easier for users to sign up and schedule product demos.
+									it easier for users to sign up and schedule
+									product&nbsp;demos.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									What I Learned
 								</h2>
 								<p>
 									For this project I took a deep dive into understanding the
-									technical side of search engine optimization (SEO) including:
+									technical side of search engine optimization
+									(SEO)&nbsp;including:
 								</p>
 								<ul class="grid list-disc gap-y-2 pl-8">
 									<li>
 										Semantic HTML which has a significant impact on how web
 										crawlers read and understand the content of a webpage, as it
 										provides clear and structured information about the purpose
-										and meaning of each element on the page.
+										and meaning of each element on the&nbsp;page.
 									</li>
 									<li>
 										Structured data which is a way to mark up the content on
-										your website in a way that search engines can understand it
-										better.
+										your website in a way that search engines can understand
+										it&nbsp;better.
 									</li>
 									<li>
 										The importance of elements such as breadcrumbs and a table
 										of contents to help establish a clear hierarchy for your
 										site and a quick overview of the content on the page. These
 										elements not only help users, but also help search engines
-										understand the relationships between pages on your site.
+										understand the relationships between pages on
+										your&nbsp;site.
 									</li>
 								</ul>
 								<p>
 									This project provided me the opportunity to learn light
 									JavaScript and React, how to leverage components to create
 									reusable code, and how to use CSS modules to modularize and
-									maintain CSS code.
+									maintain CSS&nbsp;code.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Wrap Up</h2>
 								<p>
 									The conversion of the CoSchedule website from PHP to React
 									using Next.js was a massive undertaking, but the team's
 									efforts were well worth it. This solid foundation will serve
-									the team well for years to come.
+									the team well for years to&nbsp;come.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									Acknowledgements
@@ -377,8 +390,8 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<li>Tony S.</li>
 								</ul>
 								<p class="pt-8 text-sm italic text-slate-600">
-									CoSchedule.com is a property of CoSchedule. All rights
-									reserved.
+									CoSchedule.com is a property of CoSchedule. All
+									rights&nbsp;reserved.
 								</p>
 							</div>
 						</SmallContainer>
