--- a/src/pages/mychart.astro
+++ b/src/pages/mychart.astro
@@ -84,18 +84,19 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 							<div class="grid gap-y-4">
 								<p class="lg:text-lg lg:leading-loose">
 									As the healthcare industry embraces technology to connect with
-									patients, how can the experience be improved?
+									patients, how can the experience be&nbsp;improved?
 								</p>
 								<p class="lg:text-lg lg:leading-loose">
 									The objective of this UX/UI case study is to evaluate and
-									improve the user experience of the MyChart healthcare app.
+									improve the user experience of the MyChart
+									healthcare&nbsp;app.
 								</p>
 								<p class="lg:text-lg lg:leading-loose">
 									The study focuses on analyzing and redesigning the login page
 									based on research insights and best design practices. The
 									project aims to create a user-centered design that enhances
 									the app's usability, accessibility, and visual appeal while
-									aligning with the brand's guidelines and requirements.
+									aligning with the brand's guidelines and&nbsp;requirements.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									About MyChart
@@ -107,7 +108,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									upcoming appointments, medical bills, and price estimates.
 									Additionally, patients are able to schedule appointments,
 									contact their care team via secure messaging, and connect with
-									their provider via a virtual visit.
+									their provider via a virtual&nbsp;visit.
 								</p>
 							</div>
 						</SmallContainer>
@@ -131,8 +132,8 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									page is unclear due to too many buttons and a lack of
 									hierarchy. Third, the low contrast is a problem for
 									accessibility, as everything is a shade of blue or gray.
-									Finally, the page elements are misaligned making the page feel
-									cluttered.
+									Finally, the page elements are misaligned making the page
+									feel&nbsp;cluttered.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Research</h2>
 								<p>
@@ -140,13 +141,13 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									Crowd reviews to provided valuable feedback from real users.
 									This research helped me to identify some common pain points,
 									strengths, and weaknesses of the app, which informed my design
-									decisions throughout this case study.
+									decisions throughout this case&nbsp;study.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Personas</h2>
 								<p>
 									I found it intriguing to redesign a healthcare app because of
 									the diverse user base to consider. The app must be accessible
-									and user-friendly for all ages, abilities, and cultures.
+									and user-friendly for all ages, abilities, and&nbsp;cultures.
 								</p>
 								<p>
 									It challenged me to think about users who may have limited
@@ -154,14 +155,14 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									visual or hearing impairments. Additionally, healthcare apps
 									serve a diverse demographic,including individuals from
 									different ethnic and cultural backgrounds, speaking different
-									languages, and having varying levels of health literacy.
+									languages, and having varying levels of health&nbsp;literacy.
 								</p>
 								<h2>User Flow</h2>
 								<p>
 									To access the MyChart login page on a desktop involves
 									navigating to the healthcare provider's website, finding the
 									MyChart login button or link, and entering login credentials
-									or creating a new account if necessary.
+									or creating a new account if&nbsp;necessary.
 								</p>
 							</div>
 						</SmallContainer>
@@ -190,12 +191,12 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									concepts, including a stripped-down version as well as a
 									version with all the information but organizing it in a way
 									that clearly communicates the primary action and purpose of
-									the page.
+									the&nbsp;page.
 								</p>
 								<p>
 									This process allowed me to iterate quickly and efficiently
 									while ensuring that the final design would meet the needs of
-									the app's diverse user base.
+									the app's diverse user&nbsp;base.
 								</p>
 							</div>
 						</SmallContainer>
@@ -216,8 +217,8 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									moved on to creating high-fidelity mockups of the login page.
 									With a clearer understanding of the primary action and purpose
 									of the page, I was able to add visual design elements such as
-									typography, color, and imagery that would enhance the user
-									experience.
+									typography, color, and imagery that would enhance the
+									user&nbsp;experience.
 								</p>
 								<p>
 									While the high-fidelity mockups represent a significant
@@ -225,7 +226,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									testing and iteration would be ideal. A/B testing or gathering
 									more feedback from users would help to ensure that the
 									redesigned login page effectively meets the needs of all users
-									and achieves its intended purpose.
+									and achieves its intended&nbsp;purpose.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									Design Decisions
@@ -234,7 +235,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									When designing the MyChart login page, I focused on
 									establishing a clear element hierarchy to help users navigate
 									the page and complete the desired action. Let’s take a closer
-									look at the form elements.
+									look at the form&nbsp;elements.
 								</p>
 							</div>
 						</SmallContainer>
@@ -253,35 +254,35 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									<li>
 										<span class="font-medium">Context:</span> This group includes
 										the page title and other contextual elements that help users
-										understand what the page is for and what they can expect to accomplish.
+										understand what the page is for and what they can expect to&nbsp;accomplish.
 									</li>
 									<li>
 										<span class="font-medium">Form Inputs:</span> This group includes
 										all the fields that users need to fill in to complete the primary
-										action, such as email and password* fields
+										action, such as email and password&nbsp;fields
 									</li>
 									<li>
 										<span class="font-medium">Actions:</span> This group includes
 										the primary action button that allows users to move forward,
 										as well as a secondary action that allows users to switch to
-										a different option, in this case, signing in.
+										a different option, in this case, signing&nbsp;in.
 									</li>
 									<li>
 										<span class="font-medium">Links:</span> This group includes any
 										secondary actions or resources that users may need at this stage
-										of the login process.
+										of the login&nbsp;process.
 									</li>
 								</ul>
 								<p>
 									To make it easier for users to process each of these groups
 									individually, they are separated into distinct divisions with
-									clear visual hierarchy.
+									clear visual&nbsp;hierarchy.
 								</p>
 								<p>
 									*Note: I did not include a password field. Based on user
 									feedback it was clear they struggled with the sign in process
 									using a User ID and password. Therefore, I propose using a
-									passwordless authentication sign in.
+									passwordless authentication sign&nbsp;in.
 								</p>
 							</div>
 						</SmallContainer>
@@ -299,14 +300,15 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									I prioritized consistency and alignment by using an 8-point
 									grid system. All spacing is a multiple of the base number.
 									This approach ensures that all elements on the page have a
-									consistent and harmonious relationship to one another.
+									consistent and harmonious relationship to one&nbsp;another.
 								</p>
 								<p>
 									To maintain the rule of proximity, I ensured that the spacing
 									between elements followed the grid system. This meant that
 									elements that belonged together, such as those within a
 									hierarchy group, were spaced closer together than elements
-									that were separate, such as the hierarchy groups themselves.
+									that were separate, such as the hierarchy
+									groups&nbsp;themselves.
 								</p>
 							</div>
 						</SmallContainer>
@@ -323,23 +325,23 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 								<p>
 									I aimed to create a clear hierarchy and improve on-screen
 									readability using one font family, two font weights, and four
-									font sizes.
+									font&nbsp;sizes.
 								</p>
 								<ul class="grid list-disc gap-y-2 pl-8">
 									<li>
 										<span class="font-medium">Font Family: Source Sans Pro</span
-										>, a popular sans-serif typeface known for its legibility on
-										screens
+										>, a popular sans-serif typeface known for its legibility
+										on&nbsp;screens
 									</li>
 									<li>
 										<span class="font-medium"
 											>Font Weight: Regular and Semibold</span
-										>, distinguish between headings and body text
+										>, distinguish between headings and body&nbsp;text
 									</li>
 									<li>
 										<span class="font-medium">Font Size: 16, 18, 20, 36</span>,
-										larger sizes used for headings and buttons help them stand
-										out
+										larger sizes used for headings and buttons help them
+										stand&nbsp;out
 									</li>
 								</ul>
 							</div>
@@ -358,13 +360,13 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 								</h3>
 								<p>
 									I prioritized accessibility and ensured all page elements met
-									minimum contrast requirements.
+									minimum contrast&nbsp;requirements.
 								</p>
 								<p>
 									In addition to meeting accessibility guidelines, I aimed to
 									use clear and concise language throughout the form element to
 									avoid confusion and help users quickly understand the purpose
-									and primary action of the page.
+									and primary action of the&nbsp;page.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									To Wrap Up
@@ -373,7 +375,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									Of course design is never done. Even after implementing this
 									redesign, there is always room for improvement. It's important
 									to track how the updated sign in page performs over time to
-									identify areas for further refinement.
+									identify areas for further&nbsp;refinement.
 								</p>
 								<p class="pt-8 text-sm italic text-slate-600">
 									I am not affiliated with MyChart by Epic in any capacity. The
