--- a/src/pages/headline-studio-app.astro
+++ b/src/pages/headline-studio-app.astro
@@ -106,7 +106,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									process behind Headline AI. A powerful feature in Headline
 									Studio that uses Natural Language Processing and other AI
 									techniques to generate a variety of headline styles, tones,
-									and structures to assist in the user’s writing process.
+									and structures to assist in the user’s writing&nbsp;process.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									About Headline Studio
@@ -117,7 +117,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									their headlines, and ultimately drive more traffic and
 									engagement to their content. The tool combines artificial
 									intelligence and data-driven analysis to provide users with
-									insights on headline performance and SEO optimization.
+									insights on headline performance and SEO&nbsp;optimization.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									What problem are we solving?
@@ -128,7 +128,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									leveraging AI and machine learning algorithms, Headline Studio
 									solves this problem by providing a user-friendly interface
 									that generates a variety of headline ideas and provides
-									insights on the potential performance of each headline.
+									insights on the potential performance of each&nbsp;headline.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">Research</h2>
 								<p>
@@ -136,7 +136,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									AI tools and ready articles about headline writing. I also
 									looked at how people were already leveraging AI in their
 									headline writing process and identified opportunities to
-									incorporate those ideas.
+									incorporate those&nbsp;ideas.
 								</p>
 							</div>
 						</SmallContainer>
@@ -171,14 +171,14 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									with the generated headlines, including copying, editing, and
 									analyzing. Ultimately, after careful consideration, our team
 									decided that a chat interface was the most user-friendly and
-									familiar option.
+									familiar&nbsp;option.
 								</p>
 								<p>
 									For the MVP, we kept the interface simple with just a button
 									to analyze the headline, as additional options would have
 									added unnecessary complexity. The chat interface effectively
 									communicates a back-and-forth brainstorming tool and provides
-									flexibility for future developments of this feature.
+									flexibility for future developments of this&nbsp;feature.
 								</p>
 							</div>
 						</SmallContainer>
@@ -210,21 +210,21 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									Designing the prompt and response experience for Headline AI
 									was a critical step in making the feature intuitive and
 									engaging. Using Figma, I created an interface that seamlessly
-									integrated with the rest of the Headline Studio app.
+									integrated with the rest of the Headline Studio&nbsp;app.
 								</p>
 								<p>I focused on:</p>
 								<ul class="grid list-disc gap-y-2 pl-8">
 									<li>
 										Formatting responses that were easily readable and scannable
-										for users.
+										for&nbsp;users.
 									</li>
 									<li>
 										Incorporating a Headline Bot persona to communicate with
-										users in a fun, conversational, and bot-like language.
+										users in a fun, conversational, and bot-like&nbsp;language.
 									</li>
 									<li>
 										Error handling, anticipating and designing for parsing
-										errors and response timeouts.
+										errors and response&nbsp;timeouts.
 									</li>
 								</ul>
 								<p>
@@ -233,7 +233,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									taste of the Headline AI feature and incentivize them to
 									upgrade to the paid plan, we designed the experience to allow
 									them to interact with the feature, but are prompted to upgrade
-									to unlock the AI response with generated headlines.
+									to unlock the AI response with generated&nbsp;headlines.
 								</p>
 								<h3 class="pt-8 text-xl font-medium lg:text-2xl">
 									Build & Launch
@@ -241,7 +241,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 								<p>
 									At this phase I was responsible for implementing the HTML &
 									CSS for Headline AI. I worked closely with an engineer to
-									complete all necessary backend functionality.
+									complete all necessary backend&nbsp;functionality.
 								</p>
 							</div>
 						</SmallContainer>
@@ -264,7 +264,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 								</h3>
 								<p>
 									After the initial launch, we observed a couple of areas that
-									needed improvement.
+									needed&nbsp;improvement.
 								</p>
 								<ul class="grid list-disc gap-y-2 pl-8">
 									<li>Initial greeting and prompt animation</li>
@@ -277,7 +277,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									with the feature. We wanted to keep the animation because it
 									communicated to the user the chat-like experience. However I
 									did speed it up so users can see the prompts within less than
-									a second of visiting the AI tab.
+									a second of visiting the AI&nbsp;tab.
 								</p>
 								<p>
 									Second, for our Headline AI analytics dashboard noticed
@@ -288,7 +288,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									decided to experiment with streaming in responses instead of
 									showing everything all at once. This approach improved the
 									response time and reduced the likelihood of users leaving
-									before getting a full response.
+									before getting a full&nbsp;response.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									What I Learned
@@ -296,13 +296,13 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 								<p>
 									During the development process of this feature, I had the
 									opportunity to lead ideation and design discussions, which
-									helped me improve my communication and leadership skills.
+									helped me improve my communication and leadership&nbsp;skills.
 								</p>
 								<p>
 									In addition, I experimented with prototypes in Figma, which
 									helped me deepen my knowledge of the tool. By creating a
 									working prototype, I was better able to communicate my ideas
-									to the team and receive useful feedback.
+									to the team and receive useful&nbsp;feedback.
 								</p>
 								<p>
 									While working on this project, I found inspiration in the book <span
@@ -310,8 +310,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									> by Don Norman. Norman emphasizes the importance of designing
 									for failure. This concept resonated with me, as I applied it to
 									ensure that the Headline AI feature would provide users with a
-									seamless experience, even in the event of unexpected errors or
-									delays
+									seamless experience, even in the event of unexpected errors or&nbsp;delays
 								</p>
 							</div>
 						</SmallContainer>
@@ -324,7 +323,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 										class="text-xl font-medium leading-normal md:text-2xl md:leading-normal"
 									>
 										“Designers need to focus their attention on the cases where
-										things go wrong, not just when things work as planned.”
+										things go wrong, not just when things work as&nbsp;planned.”
 									</p>
 								</blockquote>
 								<figcaption class="font-mono-space text-sm">
@@ -341,7 +340,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									with AI, users are able to overcome writer's block and quickly
 									generate fresh ideas and find the right headline angle to
 									engage their audience, while streamlining their writing
-									workflow saving time and effort.
+									workflow saving time and&nbsp;effort.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									Acknowledgements
@@ -363,8 +362,8 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<li>Tony S.</li>
 								</ul>
 								<p class="pt-8 text-sm italic text-slate-600">
-									Headline Studio is a property of CoSchedule. All rights
-									reserved.
+									Headline Studio is a property of CoSchedule. All
+									rights&nbsp;reserved.
 								</p>
 							</div>
 						</SmallContainer>
