fix heading and footer styles

--- a/src/pages/mychart.astro
+++ b/src/pages/mychart.astro
@@ -157,7 +157,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									different ethnic and cultural backgrounds, speaking different
 									languages, and having varying levels of health&nbsp;literacy.
 								</p>
-								<h2>User Flow</h2>
+								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">User Flow</h2>
 								<p>
 									To access the MyChart login page on a desktop involves
 									navigating to the healthcare provider's website, finding the
